<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alan.washer.washercleaner.MainActivity"
    android:background="@drawable/background"
    android:gravity="center|bottom">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_display"
        android:id="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="140dp"
        android:textSize="60sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/log_in_button"
        android:id="@+id/logIn"
        android:layout_marginTop="40dp"
        android:textSize="17.5dp"
        android:layout_gravity="center"
        android:onClick="changeToLogIn"
        android:textColor="@android:color/darker_gray"
        android:background="@android:color/white"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
