<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@drawable/background_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:text="@string/forgot_password_description"
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:gravity="center" />

        <EditText
            style="@style/input_text"
            android:layout_width="fill_parent"
            android:id="@+id/forgottenEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_marginTop="30dp" />

        <Button
            style="@style/button_style"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dp"
            android:text="@string/recover_password_button"
            android:id="@+id/recover_password_button"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="onClick"/>
    </LinearLayout>
</ScrollView>
