<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    tools:context="com.alan.washer.washercleaner.LoginActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/darker_gray"
            android:background="@android:color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/darker_gray"
            android:background="@android:color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:onClick="onClickForgotPassword"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>
